src/test/compile-fail/issue-6458-4.rs
// Copyright 2013 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

fn foo(b: bool) -> Result<bool,StrBuf> {
    Err("bar".to_owned());
    //~^ ERROR: cannot determine a type for this expression: unconstrained type
}

fn main() {
    foo(false);
}
